# look-and-say-dufour

./: README.md  pyproject.toml
src/look-and-say-dufour/: example.py
