[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "look-and-say-dufour"
version = "0.0.1"
authors = [
  { name="Vincent Dufour", email="avdufour@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vincentadufour/look-and-say-dufour"
"Bug Tracker" = "https://github.com/vincentadufour/look-and-say-dufour"